--- a/SPW.UI.Web/Web.config
+++ b/SPW.UI.Web/Web.config
@@ -47,10 +47,11 @@
       <add verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     </httpHandlers>
     <pages controlRenderingCompatibilityVersion="4.0" />
+	<customErrors mode="Off"/>
   </system.web>
   <connectionStrings>
-    <add name="SPWEntities" connectionString="metadata=res://*/SPW.csdl|res://*/SPW.ssdl|res://*/SPW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLSERVER2008R2;initial catalog=SPW;user id=sa;password=1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SPWConnect" connectionString="data source=.\SQLSERVER2008R2;initial catalog=SPW;user id=sa;password=1234" providerName="System.Data.SqlClient" />
+    <add name="SPWEntities" connectionString="metadata=res://*/SPW.csdl|res://*/SPW.ssdl|res://*/SPW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS2008R2;initial catalog=SPW;user id=sa;password=admin2000;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SPWConnect" connectionString="data source=.\SQLSERVER2008R2;initial catalog=SPW;user id=sa;password=admin2000" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
