--- a/SPW.DAL/SPW.DAL.csproj
+++ b/SPW.DAL/SPW.DAL.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Common.cs" />
     <Compile Include="DataServiceReport\ReportMonthlySaleDataService.cs" />
     <Compile Include="DataServiceReport\ReportSaleVolumeDataService.cs" />
+    <Compile Include="DataServiceReport\SearchAutoComplete.cs" />
     <Compile Include="DBBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SPW.Context.cs">
