--- a/SPW.DataService/SPW.DataService.csproj
+++ b/SPW.DataService/SPW.DataService.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CategoryService.cs" />
     <Compile Include="ColorService.cs" />
     <Compile Include="AccountMastService.cs" />
+    <Compile Include="PayInTranService.cs" />
     <Compile Include="DataServiceController\DataServiceBase.cs" />
     <Compile Include="DataServiceController\DataServiceEngine.cs" />
     <Compile Include="DataServiceController\IDataService.cs" />
