--- a/SPW.UI.Web/SPW.UI.Web.csproj
+++ b/SPW.UI.Web/SPW.UI.Web.csproj
@@ -158,6 +158,7 @@
     <Content Include="JQuery\npm.js" />
     <Content Include="JQuery\sb-admin-2.js" />
     <Content Include="PageLogin\Login.aspx" />
+    <Content Include="Page\ReportPayInSummary.aspx" />
     <Content Include="Page\ManageInvoice.aspx" />
     <Content Include="Page\ManageStock.aspx" />
     <Content Include="Page\ManageSupplier.aspx" />
@@ -212,6 +213,7 @@
     <Content Include="Page\SearchDepartment.aspx" />
     <Content Include="Page\SearchEmployee.aspx" />
     <Content Include="Page\StockIn.aspx" />
+    <Content Include="Reports\PayInSummary.aspx" />
     <Content Include="Reports\PayInSlipKSBReport.aspx" />
     <Content Include="Reports\PayInSlipTMBReport.aspx" />
     <Content Include="Reports\MonthlySale.aspx" />
@@ -250,6 +252,13 @@
     </Compile>
     <Compile Include="PageLogin\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page\ReportPayInSummary.aspx.cs">
+      <DependentUpon>ReportPayInSummary.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page\ReportPayInSummary.aspx.designer.cs">
+      <DependentUpon>ReportPayInSummary.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page\ManageInvoice.aspx.cs">
       <DependentUpon>ManageInvoice.aspx</DependentUpon>
@@ -630,6 +639,13 @@
       <DependentUpon>StockIn.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\PayInSummary.aspx.cs">
+      <DependentUpon>PayInSummary.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reports\PayInSummary.aspx.designer.cs">
+      <DependentUpon>PayInSummary.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Reports\PayInSlipKSB.cs">
       <DependentUpon>PayInSlipKSB.rpt</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -683,6 +699,12 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PayInSummaryData.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\PayInSummaryReport.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PayInSummaryReport.rpt</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Reports\SaleVolume.aspx.cs">
       <DependentUpon>SaleVolume.aspx</DependentUpon>
@@ -857,6 +879,10 @@
     <EmbeddedResource Include="Reports\PayInSlipTMB.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>PayInSlipTMB.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\PayInSummaryReport.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>PayInSummaryReport.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\SaleVolumeReport.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
