--- a/SPW.UI.Web/SPW.UI.Web.csproj
+++ b/SPW.UI.Web/SPW.UI.Web.csproj
@@ -193,6 +193,7 @@
     <Content Include="Page\SearchRole.aspx" />
     <Content Include="Page\SearchSupplier.aspx" />
     <Content Include="Page\SearchTracery.aspx" />
+    <Content Include="Page\SearchTranspotLine.aspx" />
     <Content Include="Page\SearchUser.aspx" />
     <Content Include="Page\SearchColorProduct.aspx" />
     <Content Include="Page\SearchColorType.aspx" />
@@ -498,6 +499,13 @@
     </Compile>
     <Compile Include="Page\SearchTracery.aspx.designer.cs">
       <DependentUpon>SearchTracery.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page\SearchTranspotLine.aspx.cs">
+      <DependentUpon>SearchTranspotLine.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page\SearchTranspotLine.aspx.designer.cs">
+      <DependentUpon>SearchTranspotLine.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page\SearchUser.aspx.cs">
       <DependentUpon>SearchUser.aspx</DependentUpon>
