--- a/SPW.Model/SPW.Model.csproj
+++ b/SPW.Model/SPW.Model.csproj
@@ -65,6 +65,7 @@
     <Compile Include="COLOR_TYPE.cs">
       <DependentUpon>SPW.tt</DependentUpon>
     </Compile>
+    <Compile Include="CustomModel\ACCOUNT_MAST.cs" />
     <Compile Include="CustomModel\AP_VEHICLE_TRANS.cs" />
     <Compile Include="CustomModel\ASSET_TYPE.cs" />
     <Compile Include="CustomModel\CATEGORY.cs" />
@@ -73,6 +74,8 @@
     <Compile Include="CustomModel\DELIVERY_INDEX.cs" />
     <Compile Include="CustomModel\DELIVERY_INDEX_DETAIL.cs" />
     <Compile Include="CustomModel\DELIVERY_ORDER_LOG.cs" />
+    <Compile Include="CustomModel\PAYIN_APPROVER.cs" />
+    <Compile Include="CustomModel\PAYIN_TRANS.cs" />
     <Compile Include="CustomModel\PRODUCT_DETAIL.cs" />
     <Compile Include="CustomModel\STOCK_PRODUCT_STOCK.cs" />
     <Compile Include="CustomModel\STOCK_PRODUCT_TRANS.cs" />
