--- a/SPW.Model/SPW.Model.csproj
+++ b/SPW.Model/SPW.Model.csproj
@@ -137,6 +137,12 @@
     <Compile Include="PAYIN_TRANS.cs">
       <DependentUpon>SPW.tt</DependentUpon>
     </Compile>
+    <Compile Include="PO_DT_TRANS.cs">
+      <DependentUpon>SPW.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PO_HD_TRANS.cs">
+      <DependentUpon>SPW.tt</DependentUpon>
+    </Compile>
     <Compile Include="PRODUCT.cs">
       <DependentUpon>SPW.tt</DependentUpon>
     </Compile>
@@ -148,6 +154,24 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PROVINCE.cs">
+      <DependentUpon>SPW.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PR_DT_TRANS.cs">
+      <DependentUpon>SPW.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PR_HD_TRANS.cs">
+      <DependentUpon>SPW.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RAW_PACK_PRICE_HIST.cs">
+      <DependentUpon>SPW.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RAW_PACK_SIZE.cs">
+      <DependentUpon>SPW.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RAW_PRODUCT.cs">
+      <DependentUpon>SPW.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RAW_TYPE.cs">
       <DependentUpon>SPW.tt</DependentUpon>
     </Compile>
     <Compile Include="ROAD.cs">
@@ -167,6 +191,9 @@
       <DependentUpon>SPW.tt</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="STOCK_PRODUCT_COLOR.cs">
+      <DependentUpon>SPW.tt</DependentUpon>
     </Compile>
     <Compile Include="STOCK_PRODUCT_STOCK.cs">
       <DependentUpon>SPW.tt</DependentUpon>
@@ -204,6 +231,9 @@
     <Compile Include="TRANSPORT_LINE.cs">
       <DependentUpon>SPW.tt</DependentUpon>
     </Compile>
+    <Compile Include="UNIT_TYPE.cs">
+      <DependentUpon>SPW.tt</DependentUpon>
+    </Compile>
     <Compile Include="USER.cs">
       <DependentUpon>SPW.tt</DependentUpon>
     </Compile>
@@ -213,7 +243,7 @@
     <Compile Include="VENDOR.cs">
       <DependentUpon>SPW.tt</DependentUpon>
     </Compile>
-    <Compile Include="VENDOR_DEAL_CONDITION.cs">
+    <Compile Include="VENDOR_DEAL_DISCOUNT.cs">
       <DependentUpon>SPW.tt</DependentUpon>
     </Compile>
     <Compile Include="ZONE.cs">
