--- a/SPW.DataService/SPW.DataService.csproj
+++ b/SPW.DataService/SPW.DataService.csproj
@@ -74,6 +74,7 @@
     <Compile Include="StockTypeService.cs" />
     <Compile Include="SupplierService.cs" />
     <Compile Include="TraceryService.cs" />
+    <Compile Include="UnitTypeService.cs" />
     <Compile Include="UserService.cs" />
     <Compile Include="VehicleService.cs" />
     <Compile Include="ColorTypeService.cs" />
