--- a/SPW.DataService/SPW.DataService.csproj
+++ b/SPW.DataService/SPW.DataService.csproj
@@ -56,6 +56,8 @@
     <Compile Include="RawProductService.cs" />
     <Compile Include="RawTypeService.cs" />
     <Compile Include="StockProductColorService.cs" />
+    <Compile Include="StockRawReceiveTransService.cs" />
+    <Compile Include="StockRawStockService.cs" />
     <Compile Include="TransportLineService.cs" />
     <Compile Include="PayInTranService.cs" />
     <Compile Include="DataServiceController\DataServiceBase.cs" />
