--- a/SPW.UI.Web/SPW.UI.Web.csproj
+++ b/SPW.UI.Web/SPW.UI.Web.csproj
@@ -231,6 +231,7 @@
     <Content Include="Page\SearchDepartment.aspx" />
     <Content Include="Page\SearchEmployee.aspx" />
     <Content Include="Page\StockIn.aspx" />
+    <Content Include="Page\StockRaw.aspx" />
     <Content Include="Reports\PayInSlipPaper.aspx" />
     <Content Include="Reports\PayInSummary.aspx" />
     <Content Include="Reports\PayInSlipKSBReport.aspx" />
@@ -782,6 +783,13 @@
     </Compile>
     <Compile Include="Page\StockIn.aspx.designer.cs">
       <DependentUpon>StockIn.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page\StockRaw.aspx.cs">
+      <DependentUpon>StockRaw.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page\StockRaw.aspx.designer.cs">
+      <DependentUpon>StockRaw.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reports\PayInSlipPaper.aspx.cs">
