--- a/SPW.DataService/SPW.DataService.csproj
+++ b/SPW.DataService/SPW.DataService.csproj
@@ -48,6 +48,8 @@
     <Compile Include="CategoryService.cs" />
     <Compile Include="ColorService.cs" />
     <Compile Include="AccountMastService.cs" />
+    <Compile Include="StockProductWithdrawService.cs" />
+    <Compile Include="SubFunctionService.cs" />
     <Compile Include="PoDtTransService.cs" />
     <Compile Include="PoHdTransService.cs" />
     <Compile Include="PrDtTransService.cs" />
